# Horizon-Robotics-Journey5-H265-Encode-Demo

./: CMakeLists.txt  README.md  make.sh
src/: main.cpp  mediaCodecTest.cpp  media_codec.c
